# Ymir-Password_Manager_CLI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_basic.py  test_search_query.py  test_security.py  test_security_integration.py
ymir/: main.py
ymir/cli/: auth.py  main.py
ymir/cli/commands/: __init__.py  add.py  base.py  edit.py  generate.py  list.py  search.py
ymir/cli/interface/: menu.py  prompts.py
ymir/core/models/: password_entry.py  search_query.py
ymir/core/services/: search_service.py  tag_service.py
ymir/security/: encryption.py  memory.py
ymir/storage/: password_manager.py
ymir/storage/implementations/: json_storage.py
ymir/utils/: config.py
